crates/op-diagram-mermaid/tests/snapshots/parse__diagrams@tasks__cqr-71.mmd.snap
---
source: crates/op-diagram-mermaid/tests/parse.rs
expression: diagram
input_file: crates/op-diagram-mermaid/tests/diagrams/tasks/cqr-71.mmd
---
{
  "kind": "graph",
  "direction": "down",
  "nodes": [
    {
      "id": "sessions",
      "shape": {
        "kind": "table",
        "attributes": [
          {
            "data_type": "BLOB",
            "name": "token_hash",
            "keys": [
              "PK"
            ],
            "comment": "32 bytes"
          },
          {
            "data_type": "INTEGER",
            "name": "user_id",
            "keys": [
              "FK"
            ]
          },
          {
            "data_type": "INTEGER",
            "name": "created_at",
            "comment": "seconds"
          },
          {
            "data_type": "INTEGER",
            "name": "expires_at",
            "comment": "seconds"
          }
        ]
      },
      "label": [
        "sessions"
      ]
    },
    {
      "id": "users",
      "shape": {
        "kind": "table",
        "attributes": [
          {
            "data_type": "INTEGER",
            "name": "id",
            "keys": [
              "PK"
            ]
          }
        ]
      },
      "label": [
        "users"
      ]
    }
  ],
  "edges": [
    {
      "from": "sessions",
      "to": "users",
      "label": [
        "user_id"
      ],
      "stroke": "solid",
      "tail": "zero_or_more",
      "head": "exactly_one",
      "min_length": 1
    }
  ]
}
