crates/op-diagram-mermaid/tests/snapshots/parse__diagrams@tasks__cqr-73-tables.mmd.snap
---
source: crates/op-diagram-mermaid/tests/parse.rs
expression: diagram
input_file: crates/op-diagram-mermaid/tests/diagrams/tasks/cqr-73-tables.mmd
---
{
  "kind": "graph",
  "direction": "down",
  "nodes": [
    {
      "id": "question_reports",
      "shape": {
        "kind": "table",
        "attributes": [
          {
            "data_type": "INTEGER",
            "name": "id",
            "keys": [
              "PK"
            ]
          },
          {
            "data_type": "INTEGER",
            "name": "user_id"
          },
          {
            "data_type": "INTEGER",
            "name": "question_id"
          },
          {
            "data_type": "TEXT",
            "name": "language"
          },
          {
            "data_type": "TEXT",
            "name": "problem_kind"
          },
          {
            "data_type": "INTEGER",
            "name": "created_at",
            "comment": "seconds"
          }
        ]
      },
      "label": [
        "question_reports"
      ]
    },
    {
      "id": "questions",
      "shape": {
        "kind": "table",
        "attributes": [
          {
            "data_type": "INTEGER",
            "name": "id",
            "keys": [
              "PK"
            ],
            "comment": "stable"
          }
        ]
      },
      "label": [
        "questions"
      ]
    }
  ],
  "edges": [
    {
      "from": "question_reports",
      "to": "questions",
      "label": [
        "no FK, separate store"
      ],
      "stroke": "dotted",
      "tail": "zero_or_more",
      "head": "exactly_one",
      "min_length": 1
    }
  ]
}
