crates/op-diagram-mermaid/tests/snapshots/parse__diagrams@tasks__opp-115.mmd.snap
---
source: crates/op-diagram-mermaid/tests/parse.rs
expression: diagram
input_file: crates/op-diagram-mermaid/tests/diagrams/tasks/opp-115.mmd
---
{
  "kind": "graph",
  "direction": "down",
  "nodes": [
    {
      "id": "root",
      "shape": {
        "kind": "diamond"
      },
      "label": [
        "--root given?"
      ]
    },
    {
      "id": "store",
      "shape": {
        "kind": "diamond"
      },
      "label": [
        "openplan.store set?"
      ]
    },
    {
      "id": "ref",
      "shape": {
        "kind": "diamond"
      },
      "label": [
        "refs/openplan/tasks in this repository?"
      ]
    },
    {
      "id": "local",
      "shape": {
        "kind": "diamond"
      },
      "label": [
        ".plan/ with a history file above?"
      ]
    },
    {
      "id": "use_root",
      "shape": {
        "kind": "rectangle"
      },
      "label": [
        "the path of the flag"
      ]
    },
    {
      "id": "use_store",
      "shape": {
        "kind": "rectangle"
      },
      "label": [
        "the store"
      ]
    },
    {
      "id": "use_ref",
      "shape": {
        "kind": "rectangle"
      },
      "label": [
        "this repository; sync with openplan.remote, else origin"
      ]
    },
    {
      "id": "use_local",
      "shape": {
        "kind": "rectangle"
      },
      "label": [
        "the local directory"
      ]
    },
    {
      "id": "none",
      "shape": {
        "kind": "rectangle"
      },
      "label": [
        "no tasks"
      ]
    }
  ],
  "edges": [
    {
      "from": "root",
      "to": "use_root",
      "label": [
        "yes"
      ],
      "stroke": "solid",
      "tail": "none",
      "head": "arrow",
      "min_length": 1
    },
    {
      "from": "root",
      "to": "store",
      "label": [
        "no"
      ],
      "stroke": "solid",
      "tail": "none",
      "head": "arrow",
      "min_length": 1
    },
    {
      "from": "store",
      "to": "use_store",
      "label": [
        "yes"
      ],
      "stroke": "solid",
      "tail": "none",
      "head": "arrow",
      "min_length": 1
    },
    {
      "from": "store",
      "to": "ref",
      "label": [
        "no"
      ],
      "stroke": "solid",
      "tail": "none",
      "head": "arrow",
      "min_length": 1
    },
    {
      "from": "ref",
      "to": "use_ref",
      "label": [
        "yes"
      ],
      "stroke": "solid",
      "tail": "none",
      "head": "arrow",
      "min_length": 1
    },
    {
      "from": "ref",
      "to": "local",
      "label": [
        "no"
      ],
      "stroke": "solid",
      "tail": "none",
      "head": "arrow",
      "min_length": 1
    },
    {
      "from": "local",
      "to": "use_local",
      "label": [
        "yes"
      ],
      "stroke": "solid",
      "tail": "none",
      "head": "arrow",
      "min_length": 1
    },
    {
      "from": "local",
      "to": "none",
      "label": [
        "no"
      ],
      "stroke": "solid",
      "tail": "none",
      "head": "arrow",
      "min_length": 1
    }
  ]
}
